--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
-    "reading-time": "^1.5.0"
+    "reading-time": "^1.5.0",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
