--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^9.0.8",
     "reading-time": "^1.5.0",
     "slugify": "^1.6.5"
   },
