--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.25.0",
     "date-fns": "^2.29.1",
     "next": "12.2.0",
+    "querystring": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
@@ -19,7 +20,8 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.0.8",
     "reading-time": "^1.5.0",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
